@@ -13,9 +13,7 @@ import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * Lobby Controller
@@ -36,6 +34,10 @@ public class LobbyController {
     private final SimpMessagingTemplate messagingTemplate;
     private final CombinationService combinationService;
     private final APIService apiService;
+
+    private static final String MESSAGE_LOBBY_BASE = "/topic/lobbies";
+    private static final String MESSAGE_LOBBY_CODE = "/topic/lobbies/%d";
+    private static final String MESSAGE_LOBBY_GAME = "/topic/lobbies/%d/game";
 
     LobbyController(LobbyService lobbyService, UserService userService, PlayerService playerService,
                     GameService gameService, SimpMessagingTemplate messagingTemplate, CombinationService combinationService, APIService apiService) {
@@ -70,7 +72,7 @@ public class LobbyController {
                 throw new ResponseStatusException(HttpStatus.CONFLICT, "Your user already has a lobby associated, leave it before creating a new one.");
             }
             Player player = lobbyService.createLobbyFromUser(user, lobbyPostDTO.getPublicAccess());
-            messagingTemplate.convertAndSend("/topic/lobbies", getPublicLobbiesGetDTOList());
+            messagingTemplate.convertAndSend(MESSAGE_LOBBY_BASE, getPublicLobbiesGetDTOList());
             return DTOMapper.INSTANCE.convertEntityToPlayerJoinedDTO(player);
         }
         else {
@@ -80,21 +82,20 @@ public class LobbyController {
 
     @PostMapping("/lobbies/{code}/players")
     @ResponseStatus(HttpStatus.CREATED)
-    public PlayerJoinedDTO joinPlayer(@PathVariable String code, @RequestHeader String userToken) {
+    public PlayerJoinedDTO joinPlayer(@PathVariable String code, @RequestHeader(required = false) String userToken, @RequestBody(required = false) PlayerPostDTO playerPostDTO) {
         long lobbyCodeLong = parseLobbyCode(code);
+        if (playerPostDTO == null) playerPostDTO = new PlayerPostDTO();
 
+        Player player;
         if (userToken != null && !userToken.isEmpty()) {
             User user = userService.checkToken(userToken);
-            if (user.getPlayer() != null) {
-                throw new ResponseStatusException(HttpStatus.CONFLICT, "Your user already has a lobby associated, leave it before joining a new one.");
-            }
-            Player player = lobbyService.joinLobbyFromUser(user, lobbyCodeLong);
-            messagingTemplate.convertAndSend("/topic/lobbies/" + code, DTOMapper.INSTANCE.convertEntityToLobbyGetDTO(player.getLobby()));
-            return DTOMapper.INSTANCE.convertEntityToPlayerJoinedDTO(player);
+            player = lobbyService.joinLobbyFromUser(user, lobbyCodeLong);
         }
         else {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "joining lobby as anonymous user not supported, please supply userToken as header field");
+            player = lobbyService.joinLobbyAnonymous(playerPostDTO.getPlayerName(), lobbyCodeLong);
         }
+        messagingTemplate.convertAndSend(String.format(MESSAGE_LOBBY_CODE, lobbyCodeLong), DTOMapper.INSTANCE.convertEntityToLobbyGetDTO(player.getLobby()));
+        return DTOMapper.INSTANCE.convertEntityToPlayerJoinedDTO(player);
     }
 
     @GetMapping("/lobbies/{code}/players")
@@ -102,7 +103,7 @@ public class LobbyController {
     public List<PlayerGetDTO> getPlayers(@PathVariable String code) {
         long lobbyCodeLong = parseLobbyCode(code);
         Lobby lobby = lobbyService.getLobbyByCode(lobbyCodeLong);
-        return lobby.getPlayers().stream().map(DTOMapper.INSTANCE::convertEntityToPlayerGetDTO).collect(Collectors.toList());
+        return lobby.getPlayers().stream().map(DTOMapper.INSTANCE::convertEntityToPlayerGetDTO).toList();
     }
 
     @PutMapping("/lobbies/{code}")
@@ -112,10 +113,10 @@ public class LobbyController {
 
         Map<String, Boolean> updates = lobbyService.updateLobby(lobby, lobbyPutDTO);
         if (updates.get("publicAccess") || updates.get("name")) {
-            messagingTemplate.convertAndSend("/topic/lobbies", getPublicLobbiesGetDTOList());
+            messagingTemplate.convertAndSend(MESSAGE_LOBBY_BASE, getPublicLobbiesGetDTOList());
         }
         if (updates.containsValue(true)) {
-            messagingTemplate.convertAndSend("/topic/lobbies/" + code,
+            messagingTemplate.convertAndSend(String.format(MESSAGE_LOBBY_CODE, lobby.getCode()),
                     DTOMapper.INSTANCE.convertEntityToLobbyGetDTO(lobby));
         }
 
@@ -128,8 +129,8 @@ public class LobbyController {
         Lobby lobby = getAuthenticatedLobby(code, playerToken);
         gameService.createNewGame(lobby);
         lobby.setStatus(LobbyStatus.INGAME);
-        messagingTemplate.convertAndSend("/topic/lobbies", getPublicLobbiesGetDTOList());
-        messagingTemplate.convertAndSend("/topic/lobbies/" + code + "/game", new InstructionDTO(Instruction.start));
+        messagingTemplate.convertAndSend(MESSAGE_LOBBY_BASE, getPublicLobbiesGetDTOList());
+        messagingTemplate.convertAndSend(String.format(MESSAGE_LOBBY_GAME, lobby.getCode()), new InstructionDTO(Instruction.START));
     }
 
     @GetMapping("/lobbies/{lobbyCode}/players/{playerId}")
@@ -145,6 +146,18 @@ public class LobbyController {
                                 @RequestHeader String playerToken, @RequestBody List<Word> words) {
         Player player = getAuthenticatedPlayer(lobbyCode, playerId, playerToken);
         Word result = gameService.play(player, words);
+
+        long lobbyCodeLong = parseLobbyCode(lobbyCode);
+        Lobby lobby = lobbyService.getLobbyByCode(lobbyCodeLong);
+
+        if (lobbyService.allPlayersLost(lobby)) {
+            lobby.setStatus(LobbyStatus.PREGAME);
+            messagingTemplate.convertAndSend(String.format(MESSAGE_LOBBY_GAME, lobby.getCode()), new InstructionDTO(Instruction.STOP));
+        }
+        else {
+            messagingTemplate.convertAndSend(String.format(MESSAGE_LOBBY_GAME, lobby.getCode()), new InstructionDTO(Instruction.UPDATE));
+        }
+
         PlayerPlayedDTO playerPlayedDTO = DTOMapper.INSTANCE.convertEntityToPlayerPlayedDTO(player);
         playerPlayedDTO.setResultWord(DTOMapper.INSTANCE.convertEntityToWordDTO(result));
         return playerPlayedDTO;
@@ -154,15 +167,17 @@ public class LobbyController {
     @ResponseStatus(HttpStatus.NO_CONTENT)
     public void removePlayerFromLobby(@PathVariable String lobbyCode, @PathVariable String playerId, @RequestHeader String playerToken) {
         Player player = getAuthenticatedPlayer(lobbyCode, playerId, playerToken);
+        long lobbyCodeLong = player.getLobby().getCode();
         if (player.getOwnedLobby() == null) {
             Lobby lobby = player.getLobby();
             playerService.removePlayer(player);
-            messagingTemplate.convertAndSend("/topic/lobbies/" + lobby.getCode(), DTOMapper.INSTANCE.convertEntityToLobbyGetDTO(lobby));
+            messagingTemplate.convertAndSend(String.format(MESSAGE_LOBBY_CODE, lobby.getCode()), DTOMapper.INSTANCE.convertEntityToLobbyGetDTO(lobby));
         }
         else {
             lobbyService.removeLobby(player.getOwnedLobby());
-            messagingTemplate.convertAndSend("/topic/lobbies", getPublicLobbiesGetDTOList());
-            messagingTemplate.convertAndSend("/topic/lobbies/" + lobbyCode + "/game", new InstructionDTO(Instruction.kick));
+            messagingTemplate.convertAndSend(MESSAGE_LOBBY_BASE, getPublicLobbiesGetDTOList());
+            messagingTemplate.convertAndSend(String.format(MESSAGE_LOBBY_GAME, lobbyCodeLong),
+                    new InstructionDTO(Instruction.KICK, "The lobby was closed by the owner"));
         }
     }
 
